fixed up chart display on mobile

--- a/frontend/src/app/google-chart/master-chart/master-chart.component.scss
+++ b/frontend/src/app/google-chart/master-chart/master-chart.component.scss
@@ -9,12 +9,12 @@
 }
 
 .chart-selection {
+  margin: 10px auto;
   @media (max-width: 549px) {
     width: 90%;
   }
   @media (min-width: 550px) {
     width: 48%;
-    margin: 10px auto;
   }
 }
 
@@ -29,14 +29,8 @@
 }
 
 #divPieChart {
-  @media (max-width: 450px) {
-    width: 550px;
-    height: 550px;
-  }
-  @media (min-width: 900px) {
-    width: 750px;
-    height: 750px;
-  }
+  width: 100%;
+  height: 100%;
   @media (min-width: 901px) {
     width: 900px;
     height: 900px;
@@ -52,4 +46,9 @@
   width: 1000px;
   height: 650px;
   margin: 30px auto;
+  @media (max-width: 999px) {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
 }
